--- a/less/common.less
+++ b/less/common.less
@@ -433,6 +433,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0479be', end
 						&:hover{
 							opacity:0.4;
 						}
+						&:active{
+							opacity:0.4;
+						}
 					}
 					margin-bottom:15px;
 					&.active{
@@ -985,11 +988,14 @@ span{
         .PIXEL2EM(20)!important;
 	}
 }
-.imageThumbnail{
-	position: absolute;
-	top: 9%;
-	left: 22%;
-	width:100px;	
+.imageThumbnail {
+    width: 183px;
+    cursor: pointer;
+    -webkit-border-radius: 25px;
+    margin: 0 auto;
+    -moz-border-radius: 25px;
+    background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+    -moz-box-shadow: 1px 5.33px 11px -4px #247abc;
 }
 span.highlight{
 	color:#f26529;
